--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,36 @@
       <plugin> 
         <groupId>com.microsoft.azure</groupId>  
         <artifactId>azure-webapp-maven-plugin</artifactId>  
-        <version>1.13.0</version>
+        <version>1.13.0</version>  
+        <configuration> 
+          <schemaVersion>v2</schemaVersion>  
+          <subscriptionId>88fc7770-1602-4632-9e77-171eed71e532</subscriptionId>  
+          <resourceGroup>Azure-springboot</resourceGroup>  
+          <appName>springboot-1613873739727</appName>  
+          <pricingTier>P1v2</pricingTier>  
+          <region>centralus</region>  
+          <runtime> 
+            <os>Linux</os>  
+            <javaVersion>Java 11</javaVersion>  
+            <webContainer>Java SE</webContainer> 
+          </runtime>  
+          <appSettings> 
+            <property> 
+              <name>JAVA_OPTS</name>  
+              <value>Dserver.port=80</value> 
+            </property> 
+          </appSettings>  
+          <deployment> 
+            <resources> 
+              <resource> 
+                <directory>${project.basedir}/target</directory>  
+                <includes> 
+                  <include>*.jar</include> 
+                </includes> 
+              </resource> 
+            </resources> 
+          </deployment> 
+        </configuration> 
       </plugin> 
     </plugins> 
   </build> 
